2018.8/_sources/plugins/available/gneiss/balance-taxonomy.txt
balance-taxonomy: Balance Summary
=================================



.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <h4>Docstring:</h4>
         <pre>Usage: qiime gneiss balance-taxonomy [OPTIONS]

     Visualize the distribution of a single balance and summarize its numerator
     and denominator components.

   Options:
     --i-table ARTIFACT PATH FeatureTable[Frequency]
                                     A table of abundances.  [required]
     --i-tree ARTIFACT PATH Hierarchy
                                     The tree used to calculate the balances.
                                     [required]
     --i-taxonomy ARTIFACT PATH FeatureData[Taxonomy]
                                     Taxonomy information for the OTUs.
                                     [required]
     --p-balance-name TEXT           Name of the balance to summarize.
                                     [required]
     --p-pseudocount FLOAT           The pseudocount to add to avoid division by
                                     zero.  [default: 0.5]
     --p-taxa-level INTEGER          Level of taxonomy to summarize.  [default:
                                     0]
     --p-n-features INTEGER          The number of features to plot in the
                                     proportion plot.  [default: 10]
     --p-threshold FLOAT             A threshold to designate discrete categories
                                     for a numerical metadata column. This will
                                     split the numerical column values into two
                                     categories, values below the threshold, and
                                     values above the threshold. If not
                                     specified, this threshold will default to
                                     the mean.  [optional]
     --m-metadata-file MULTIPLE PATH
                                     Metadata file or artifact viewable as
                                     metadata. This option may be supplied
                                     multiple times to merge metadata.
                                     [optional]
     --m-metadata-column MetadataColumn[Categorical | Numeric]
                                     Column from metadata file or artifact
                                     viewable as metadata. Metadata column for
                                     plotting the balance (optional).  [optional]
     --o-visualization VISUALIZATION PATH
                                     [required if not passing --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --citations                     Show citations and exit.
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
       <h4>Import:</h4>

.. command-block::
   :no-exec:

   from qiime2.plugins.gneiss.visualizers import balance_taxonomy

.. raw:: html

       <h4>Docstring:</h4>
         <pre>Balance Summary

   Visualize the distribution of a single balance and summarize its numerator
   and denominator components.

   Parameters
   ----------
   table : FeatureTable[Frequency]
       A table of abundances.
   tree : Hierarchy
       The tree used to calculate the balances.
   taxonomy : FeatureData[Taxonomy]
       Taxonomy information for the OTUs.
   balance_name : Str
       Name of the balance to summarize.
   pseudocount : Float, optional
       The pseudocount to add to avoid division by zero.
   taxa_level : Int, optional
       Level of taxonomy to summarize.
   n_features : Int, optional
       The number of features to plot in the proportion plot.
   threshold : Float, optional
       A threshold to designate discrete categories for a numerical metadata
       column. This will split the numerical column values into two
       categories, values below the threshold, and values above the threshold.
       If not specified, this threshold will default to the mean.
   metadata : MetadataColumn[Categorical | Numeric], optional
       Metadata column for plotting the balance (optional).

   Returns
   -------
   visualization : Visualization</pre>
       </div>
     </div>
   </div>